--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 dependencies {
     implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
 
+    //coroutines
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutines"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutines"
@@ -59,8 +60,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
 
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
-
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+// Glide for Image Loading
     implementation 'com.github.bumptech.glide:glide:4.12.0'
      kapt ('com.github.bumptech.glide:compiler:4.12.0')
 
